--- a/src/public/recuperar.html
+++ b/src/public/recuperar.html
@@ -34,12 +34,12 @@
                                     <input id="username" type="email" name="username" class="form-control" placeholder="nombre@ejemplo.com" placeholder="nombre@ejemplo.com" pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}" required>
                                 </div>
                                 <div class="m-2 row">
-                                    <button class="btn btn-success ng-binding" style="border-color: azure;">Envíar email &nbsp; </button>
+                                    <button class="boton">Envíar email</button>
                                 </div>
                             </div>
                             <div class="container">
                                 <div class="row d-block">
-                                    <a style="color: rgb(16, 235, 9);" href="/">Suscríbete</a>
+                                    <a class="colortextbtn" href="/ ">Suscríbete</a>
                                 </div>
                             </div>
                         </div>
@@ -48,8 +48,8 @@
             </div>
         </div>
     </div>
-    <div class="footer">
-        <div class="version" style="color: transparent;">Alfonso González Zempoalteca</div>
+    <div class="footer ">
+        <div class="version " style="color: transparent; ">Alfonso González Zempoalteca</div>
     </div>
     <script type="text/javascript">
         (function() {
